--- a/pomodoro-clock/css/style.scss
+++ b/pomodoro-clock/css/style.scss
@@ -1,6 +1,8 @@
+$bodyBackground: #19181B;
+
 body {
   margin: 2% auto auto auto;
-  background-color: #19181B;
+  background-color: $bodyBackground;
   color: white;
 }
 
