--- a/pomodoro-clock/css/style.css
+++ b/pomodoro-clock/css/style.css
@@ -1,50 +1,39 @@
 body {
   margin: 2% auto auto auto;
   background-color: #19181B;
-  color: white;
-}
+  color: white; }
 
 #breaklength, #sessionlength, .row div {
-  display: inline-block;
-}
+  display: inline-block; }
 
 .break, .session {
-  width: 30%;
-}
+  width: 30%; }
 
 .break h4, .break p, .break button {
   color: #d9534f;
-  font-size: 150%;
-}
+  font-size: 150%; }
 
 .break p, .session p {
-  margin: 0 3%;
-}
+  margin: 0 3%; }
 
 .break button, .session button {
-  background-color: #19181B;
-}
+  background-color: #19181B; }
 
 .session h4, .session p, .session button {
   color: #5cb85c;
-  font-size: 150%;
-}
+  font-size: 150%; }
 
 #canvas {
   border: 5px solid #337ab7;
   border-radius: 50%;
-  margin-top: 2%;
-}
+  margin-top: 2%; }
 
 @media (max-width: 750px) {
   .break, .session {
-    width: 100%;
-  }
+    width: 100%; }
 
   #canvas {
-    margin-top: 15%;
-  }
-}
+    margin-top: 15%; } }
 .timer {
   display: block;
   height: 300px;
@@ -55,16 +44,13 @@ body {
   /*Stack on top of canvas*/
   font-size: 400%;
   position: relative;
-  /*Fixes Chrome z-index*/
-}
+  /*Fixes Chrome z-index*/ }
 
 .timer p {
-  margin-top: 15%;
-}
+  margin-top: 15%; }
 
 footer {
   margin-top: 1%;
-  font-size: 150%;
-}
+  font-size: 150%; }
 
 /*# sourceMappingURL=style.css.map */
