--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ h1 {
   height: 100vh;
   color: white;
   display: flex;
+  /*So I can center vertically */
   flex-direction: column;
   justify-content: center;
 }
@@ -22,7 +23,6 @@ h1 {
   color: white;
   cursor: default;
 }
-
 .fa:hover {
   color: black;
 }
@@ -33,24 +33,11 @@ h1 {
 
 .projects {
   background-color: #19181B;
+  margin: auto;
+  padding-bottom: 2%;
+}
+.projects h2 {
   color: #00FFF1;
-  margin: auto;
-  padding-bottom: 2%;
-}
-
-.contact {
-  background-color: #D3D3D3;
-  margin: auto;
-  padding-bottom: 2%;
-  text-align: center;
-}
-
-.contact a {
-  font-size: 150%;
-  text-decoration: underline;
-  display: block;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
 
 h2 {
@@ -70,12 +57,12 @@ figcaption {
   color: #009838;
 }
 
-a {
-  color: black;
+img {
+  width: 100%;
 }
 
-a:hover {
-  color: #009838;
+.techUsed {
+  font-weight: bold;
 }
 
 footer {
@@ -83,14 +70,6 @@ footer {
   color: white;
   padding: 2%;
   font-size: 150%;
-}
-
-img {
-  width: 100%;
-}
-
-.techUsed {
-  font-weight: bold;
 }
 
 /*# sourceMappingURL=style.css.map */
