--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,6 @@
+$welcomeColor: #009838;
+$projectsColor: #19181B;
+
 .container-fluid, .row {
   padding: 0;
   margin: 0;
@@ -8,12 +11,12 @@ h1 {
 }
 
 .welcome {
-  background-color: #009838;
+  background-color: $welcomeColor;
   font-size: 150%;
   min-height: 100%;
   height: 100vh;
   color: white;
-  display: flex;
+  display: flex; /*So I can center vertically */
   flex-direction: column;
   justify-content: center;
 }
@@ -21,10 +24,9 @@ h1 {
 .fa {
   color: white;
   cursor: default;
-}
-
-.fa:hover {
-  color: black;
+  &:hover {
+    color: black;
+  }
 }
 
 .fa-chevron-circle-down {
@@ -32,30 +34,17 @@ h1 {
 }
 
 .projects {
-  background-color: #19181B;
-  color: #00FFF1;
+  background-color: $projectsColor;
   margin: auto;
   padding-bottom: 2%;
-}
-
-.contact {
-  background-color: #D3D3D3;
-  margin: auto;
-  padding-bottom: 2%;
-  text-align: center;
-}
-
-.contact a {
-  font-size: 150%;
-  text-decoration: underline;
-  display: block;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  h2 {
+    color: #00FFF1;
+  }
 }
 
 h2 {
-  margin: 0;
-  padding: 2%
+    margin: 0;
+    padding: 2%;
 }
 
 figcaption {
@@ -67,22 +56,7 @@ figcaption {
 
 .figcaptionclass {
   font-size: 120%;
-  color: #009838;
-}
-
-a {
-  color: black;
-}
-
-a:hover {
-  color: #009838;
-}
-
-footer {
-  background-color: #009838;
-  color: white;
-  padding: 2%;
-  font-size: 150%;
+  color: $welcomeColor;
 }
 
 img {
@@ -91,4 +65,11 @@ img {
 
 .techUsed {
   font-weight: bold;
+}
+
+footer {
+  background-color: $welcomeColor;
+  color: white;
+  padding: 2%;
+  font-size: 150%;
 }
