--- a/shopping-recipe/src/app/recipes/recipes.component.html
+++ b/shopping-recipe/src/app/recipes/recipes.component.html
@@ -1,8 +1,16 @@
 <div class="row">
 	<div class="col-md-5">
-		<app-recipe-list></app-recipe-list>
+		<!-- Set the selectedRecipe property to the event data (recipe) from the recipeWasSelected event -->
+		<app-recipe-list (recipeWasSelected)="selectedRecipe=$event"></app-recipe-list>
 	</div>
 	<div class="col-md-7">
-		<app-recipe-detail></app-recipe-detail>
+		<!-- If selectedRecipe is set, display the recipe, and set the recipe property in recipe-detail to selectedRecipe -->
+		<app-recipe-detail 
+		*ngIf="selectedRecipe; else infoText"
+		[recipe]="selectedRecipe"></app-recipe-detail>
+		<!--Local reference (Reference an HTML element locally in the template) #infoText -->
+		<ng-template #infoText> 
+			<p>Please select a Recipe!</p>
+		</ng-template>
 	</div>
 </div>
