Added services, modified to make services work

--- a/shopping-recipe/src/app/recipes/recipes.component.html
+++ b/shopping-recipe/src/app/recipes/recipes.component.html
@@ -1,7 +1,6 @@
 <div class="row">
 	<div class="col-md-5">
-		<!-- Set the selectedRecipe property to the event data (recipe) from the recipeWasSelected event -->
-		<app-recipe-list (recipeWasSelected)="selectedRecipe=$event"></app-recipe-list>
+		<app-recipe-list></app-recipe-list>
 	</div>
 	<div class="col-md-7">
 		<!-- If selectedRecipe is set, display the recipe, and set the recipe property in recipe-detail to selectedRecipe -->
