--- a/shopping-recipe/src/app/shopping-list/shopping-list.component.html
+++ b/shopping-recipe/src/app/shopping-list/shopping-list.component.html
@@ -1,7 +1,6 @@
 <div class="row">
 	<div class="col-xs-10">
-		<!-- Calls function to push the ingredient object (from $event) into the ingredients array when ingredientAdded is fired -->
-		<app-shopping-edit (ingredientAdded)="onIngredientAdded($event)"></app-shopping-edit>
+		<app-shopping-edit></app-shopping-edit>
 		<hr>
 		<ul class="list-group">
 			<a class="list-group-item" style="cursor: pointer" 
