--- a/CryptoMarketInfo/src/app/app.component.html
+++ b/CryptoMarketInfo/src/app/app.component.html
@@ -1,18 +1,21 @@
 <div class="container">
+    <h1 class="text-center mb-5">Top 10 Cryptocurrencies by Market Cap</h1>
     <div class="row justify-content-center">
         <section style="margin: 10px; text-align: center;" class="col-lg-2" *ngFor="let coin of cmc.slice(0,5)">
-            {{ coin.name }}
+            <h3>{{ coin.name }}</h3>
+            <!--<p>{{ coin.rank }}</p>-->
+            <p>Price - {{ coin.price_usd | currency:'USD' }}</p>
+            <p>Market Cap - {{ coin.market_cap | currency:'USD' }}</p>
+            <p>Change (24h) - {{ coin.change_day }} %</p>
         </section>
     </div>
     <div class="row justify-content-center">
         <section style="margin: 10px; text-align: center;" class="col-lg-2" *ngFor="let coin of cmc.slice(5,10)">
-            {{ coin.name }}
+            <h3>{{ coin.name }}</h3>
+            <!--<p>{{ coin.rank }}</p>-->
+            <p>Price - {{ coin.price_usd | currency:'USD' }}</p>
+            <p>Market Cap - {{ coin.market_cap | currency:'USD' }}</p>
+            <p>Change (24h) - {{ coin.change_day }} %</p>
         </section>
     </div>
 </div>
-
-<!--<section class="col-xs-offset-3 col-xs-6 col-sm-offset-0 col-sm-6 col-md-4 col-lg-2">
-    <img class="icon" src="images/icon.svg" alt="Icon">
-    <h3>Coin/h3>
-    <p>Description</p>
-  </section>-->
