--- a/CryptoMarketInfo/src/app/app.component.css
+++ b/CryptoMarketInfo/src/app/app.component.css
@@ -1,8 +1,7 @@
 div.container {
-    min-height: 100%;
-    height: 100vh;
-    display: flex;
-    /*So I can center vertically */
-    flex-direction: column;
-    justify-content: center;
+    color: white;
+}
+
+section {
+    border: 1px solid white;
 }
