--- a/CryptoMarketInfo/src/styles.css
+++ b/CryptoMarketInfo/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#7d7e7d+0,0e0e0e+67 */
+background: #575857; /* Old browsers */
+background: -moz-linear-gradient(left, #575857 0%, #0e0e0e 67%); /* FF3.6-15 */
+background: -webkit-linear-gradient(left, #575857 0%,#0e0e0e 67%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to right, #575857 0%,#0e0e0e 67%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='##575857', endColorstr='#0e0e0e',GradientType=1 ); /* IE6-9 */
+}
